add discription for curriculum

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Unasaka_Electoric_Works</title>
+    <title>Unasaka_Virtual_Workshop</title>
   </head>
   <body>
   </body>
