--- a/osc.html
+++ b/osc.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="css/point.css">
   </head>
   <body>
-    <h1>公益大生とOSS</h1>
+    <h1>Title</h1>
     <h2>自己紹介</h2>
     <ul>
       <li>学部4年生</li>
       <li>公益大のあまりまじめではない方の学生のサンプル</li>
       <li>好きなもの：艦これ、銀英伝、Ruby</li>
-      <li>苦手なもの：多足類、きのこ、Python</li>
-<!--      <li>新しいもの大好き</li>
-      <li>肩こりはお友達</li>-->
+      <li>苦手なもの：多足類、Python、正規表現</li>
+      <!--      <li>新しいもの大好き</li>
+		<li>肩こりはお友達</li>-->
     </ul>
 
-    <h2>公益大情報系カリキュラム3年分（ダイジェスト）</h2>
+    <!--    <h2>公益大情報系カリキュラム3年分（ダイジェスト）</h2>-->
     <div class="timeline gray-blue timeline-left">
 
       <div class="timeline-block">
@@ -34,8 +34,8 @@
 	<div class="timeline-content">
 	  <!--	  <div class="timeline-date">2015年4月</div> -->
 	  <p class="title2">基礎演習</p>
-	  <p>各担当教員が設定したテーマに沿って、学生の自主的な活動によって読み、書き、発表といった基礎能力を養う。</p>
-	  <p>広瀬先生の演習では、OSSの取扱や利点などについて学んだ。</p>
+	  <p>各担当教員が設定したテーマに沿って、<!--学生の自主的な活動によって-->読み、書き、発表といった基礎能力を養う。</p>
+	  <p>広瀬先生の演習では、LinuxディストリビューションやTuxPaintなどを題材に、OSSの取扱や利点などについて学んだ。</p>
 	</div>
       </div>
 
@@ -44,7 +44,8 @@
 	<div class="timeline-content">
 	  <p class="title2">情報リテラシー</p>
 	  <p>コンピュータを便利に使うための技術と理論を修得する。</p>
-	  <p>また、コンピュータ上で動くソフトウェアについて、それらが処理される仕組みなどを理解し、より深い学習の土台を担う。</p>
+	  <!--	  <p>また、コンピュータ上で動くソフトウェアについて、それらが処理される仕組みなどを理解し、より深い学習の土台を担う。</p>-->
+	  <p>LibreOfficeで文書作成、Mewでメールの送受信、htmlでWebページ作成など。</p>
 	</div>
       </div>
 
@@ -52,7 +53,7 @@
 	<div class="timeline-icon"></div>
 	<div class="timeline-content">
 	  <div class="timeline-date">2016年</div>
-	  <p class="title1">2年生に進級</p>
+	  <p class="title1">2年に進級</p>
 	  <p></p>
 	</div>
       </div>
@@ -62,7 +63,8 @@
 	<div class="timeline-icon"></div>
 	<div class="timeline-content">
 	  <p class="title2">基礎プログラミング</p>
-	   <p>Rubyでの簡単なプログラミングを通じて、コンピュータによるものの考え方、論理の組み立てを修得する。</p>
+	  <p>Rubyでの簡単なプログラミングを通じて、コンピュータによるものの考え方、論理の組み立てを修得する。</p>
+	  <p>Ruby CGIで簡単なWebアプリケーションを作った。</p>
 	</div>
       </div>
       
@@ -79,7 +81,7 @@
 	<div class="timeline-icon"></div>
 	<div class="timeline-content">
 	  <p class="title2">社会情報処理</p>
-	  <p>カメラによる画像やGPSの緯度経度情報など、我々が社会活動をする上で得られる大量の情報を高効率かつ効果的に処理する手法を学ぶ。</p>
+	  <p>カメラによる画像やGPSの緯度経度など<!--、我々が社会活動をする上で得られる大量-->の情報を高効率かつ効果的に処理する手法を学ぶ。</p>
 	</div>
       </div>
       
@@ -88,6 +90,7 @@
 	<div class="timeline-content">
 	  <p class="title2">情報交換概論</p>
 	  <p>3Dプリンタを中心に、3D印刷技術やCADについて学ぶ。</p>
+	  <p>名刺サイズのプラ板に、iso規格に則って点字を並べて印刷した。</p>
 	</div>
       </div>
 
@@ -96,7 +99,7 @@
 	<div class="timeline-icon"></div>
 	<div class="timeline-content">
 	  <div class="timeline-date">2017年</div>
-	  <p class="title1">3年生に進級</p>
+	  <p class="title1">3年に進級</p>
 	  <p></p>
 	</div>
       </div>
@@ -106,8 +109,8 @@
 	<div class="timeline-icon"></div>
 	<div class="timeline-content">
 	  <p class="title2">情報デザイン論</p>
-	  <p>Webによる情報発信を題材に、公益的視点から全ての人に平等を伝えることの重要性、考え方、技法について学ぶ。</p>
-	  <p>どんな環境の人が見ても正しく情報が伝わるWebページが作れるようになることを目指す。</p>
+	  <!--<p>Webによる情報発信を題材に、公益的視点から全ての人に平等を伝えることの重要性、考え方、技法について学ぶ。</p>-->
+	 <p>どんな環境の人が見ても正しく情報が伝わるWebページが作れるようになることを目指す。</p>
 	</div>
       </div>
 
@@ -116,9 +119,10 @@
 	<div class="timeline-icon"></div>
 	<div class="timeline-content">
 	  <p class="title2">インターネット演習</p>
-	  <p>コンピュータを構成するハードウェアとそれらを繋ぐネットワークについて、安全性を確保しつつ効率的な情報管理をするための要点を学ぶ。</p>
-	  <p>また、サーバソフトウェアをコンピュータ上に実際に構築し、情報管理のコストや安全性を実体験に基づいて判断できる素養を養う。</p>
-	  <p class="hide">サーバ遊びたのしいいいいいいい</p>
+	  <p>コンピュータを構成するハードウェアとそれらを繋ぐネットワークについて、安全性を確保して情報管理をするための要点を学ぶ。</p>
+	  <!--    <p>サーバソフトウェアをコンピュータ上に実際に構築し、情報管理のコストや安全性を実体験に基づいて判断できる素養を養う。</p>-->
+	  <p>Apache HTTP Serverを使って、メイルサーバやWebサーバを構築した。</p>
+<!--	  <p class="hide">サーバ遊びたのしいいいいいいいいい</p>-->
 	</div>
       </div>      
     </div>
@@ -126,8 +130,8 @@
     <h2>まとめ</h2>
     <p></p>
     <ul>
-      <li>2年かけて必修科目で学生をOSS漬け</li>
-      <li>楽しくなってきちゃった人は他の科目も</li>
+      <!--      <li>2年かけて必修科目で学生をOSS漬け</li>
+		<li>楽しくなってきちゃった人は他の科目も</li>-->
     </ul>
   </body>
 </html>
