edit osc.html. todo- add title, edit matome

--- a/osc.html
+++ b/osc.html
@@ -16,8 +16,7 @@
       <!--      <li>新しいもの大好き</li>
 		<li>肩こりはお友達</li>-->
     </ul>
-
-    <!--    <h2>公益大情報系カリキュラム3年分（ダイジェスト）</h2>-->
+    <h2>公益大情報系カリキュラム3年分（ダイジェスト）</h2>
     <div class="timeline gray-blue timeline-left">
 
       <div class="timeline-block">
@@ -82,6 +81,8 @@
 	<div class="timeline-content">
 	  <p class="title2">社会情報処理</p>
 	  <p>カメラによる画像やGPSの緯度経度など<!--、我々が社会活動をする上で得られる大量-->の情報を高効率かつ効果的に処理する手法を学ぶ。</p>
+	  <p>撮ってきた写真をGIMPで処理したり、数値データをRで分析・統計を取る演習をした。</p>
+	  <p></p>
 	</div>
       </div>
       
@@ -110,7 +111,8 @@
 	<div class="timeline-content">
 	  <p class="title2">情報デザイン論</p>
 	  <!--<p>Webによる情報発信を題材に、公益的視点から全ての人に平等を伝えることの重要性、考え方、技法について学ぶ。</p>-->
-	 <p>どんな環境の人が見ても正しく情報が伝わるWebページが作れるようになることを目指す。</p>
+	  <p>どんな環境の人が見ても正しく情報が伝わるWebページが作れるようになることを目指す。</p>
+	  <p>CSSとJavaScriptで見た目のデザインを工夫する他、DOM操作で動的にWebページを書き換える方法について学んだ。</p>
 	</div>
       </div>
 
@@ -132,6 +134,9 @@
     <ul>
       <!--      <li>2年かけて必修科目で学生をOSS漬け</li>
 		<li>楽しくなってきちゃった人は他の科目も</li>-->
+      <li>必修科目で2年かけてゆったりOSSに親しむ</li>
+      <li>そのうち楽しくなってくるのでいろいろやってみる</li>
+      <li>3年が過ぎるころには、必要なものがあるときにまずgithubで検索するオープンソース脳学生が爆誕</li>
     </ul>
   </body>
 </html>
