edit osc.html kari kansei

--- a/osc.html
+++ b/osc.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/point.css">
   </head>
   <body>
-    <h1>Title</h1>
+    <h1><!--公益大生とOSS-->少しパソコンができるだけの学生がオープンソース脳になるまで</h1>
     <h2>自己紹介</h2>
     <ul>
       <li>学部4年生</li>
@@ -136,7 +136,8 @@
 		<li>楽しくなってきちゃった人は他の科目も</li>-->
       <li>必修科目で2年かけてゆったりOSSに親しむ</li>
       <li>そのうち楽しくなってくるのでいろいろやってみる</li>
-      <li>3年が過ぎるころには、必要なものがあるときにまずgithubで検索するオープンソース脳学生が爆誕</li>
+      <li>3年が過ぎるころには、必要なものがあるときにとりあえずgithubから探し始めるオープンソース脳学生のできあがり</li>
+      <!--<li>make installが効かないと手も足も出ないのは内緒</li>-->
     </ul>
   </body>
 </html>
