add about contents index.html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,22 @@
     <title>Unasaka_Virtual_Workshop</title>
   </head>
   <body>
+    <h1><a href="index.html">海坂電子工房</a></h1>
+    <h2>About</h2>
+    <ul>
+      <li>電子のおもちゃに関することをいろいろ扱うWebサイトです</li>
+      <li>UTAU向けボイスライブラリ「命音レイ」とかがメインコンテンツだったりします</li>
+      <li>只今引越し準備中</li>
+      <li>何か用事がございましたら、下記の連絡先までお願いします</li>
+    </ul>
+    <h2>連絡先</h2>
+    <h3>責任者</h3>
+    <ul>
+      <li>Evemonochrome Sharon Euphemia Raphael Sylvester Lilburne</li>
+      <li>伊藤帆ノ介</li>
+    </ul>
+    <p>（注）上記は同一人物の別名義です。二人がかりであれこれやってるとかではないです。</p>
+    <h3>Twitter</h3>
+    <h3>Eメール</h3>
   </body>
 </html>
